--- a/main_code_android/app/src/main/res/layout/activity_feature_template.xml
+++ b/main_code_android/app/src/main/res/layout/activity_feature_template.xml
@@ -31,71 +31,42 @@
 		android:id="@+id/toolbar_actionbar"
 		layout="@layout/toolbar"/>
 
-	<no.nordicsemi.android.nrftoolbox.widget.ForegroundRelativeLayout
-		style="@style/HeaderShadow"
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-		<!-- The size of text below must be fixed, therefore dp are used instead of sp -->
-
-		<androidx.appcompat.widget.AppCompatTextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerVertical="true"
-			android:layout_marginLeft="@dimen/template_feature_title_long_margin"
-			android:rotation="270"
-			android:text="@string/template_feature_title_long"
-			android:textColor="@color/verticalTitleColor"
-			android:textSize="26dp"
-			android:textStyle="bold" />
-
-		<TextView
-			android:id="@+id/battery"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentLeft="true"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginTop="@dimen/feature_device_name_margin_top"
-			android:background="@drawable/battery"
-			android:freezesText="true"
-			android:gravity="center"
-			android:text="@string/not_available"
-			android:textColor="#FFFFFF"
-			android:textSize="12sp"/>
-
-		<androidx.appcompat.widget.AppCompatTextView
-			android:id="@+id/device_name"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginLeft="10dp"
-			android:layout_marginTop="@dimen/feature_device_name_margin_top"
-			android:layout_toRightOf="@+id/battery"
-			android:ellipsize="end"
-			android:freezesText="true"
-			android:maxLines="1"
-			android:text="@string/template_default_name"
-			android:textAllCaps="true"
-			android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-		<!-- Application section -->
-
+		android:layout_height="match_parent"
+		android:layout_marginLeft="@dimen/feature_horizontal_margin"
+		android:layout_marginRight="@dimen/feature_horizontal_margin">
 
 		<ScrollView
 			android:id="@+id/scrollView"
 			style="@style/Widget.List"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginTop="@dimen/activity_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin"
-			android:layout_marginBottom="0dp"
-			android:layout_below="@id/device_name">
+			android:background="@android:color/transparent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
 
 			<LinearLayout
 				android:id="@+id/container"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:orientation="vertical">
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/device_name"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_toRightOf="@+id/battery"
+					android:ellipsize="end"
+					android:freezesText="true"
+					android:gravity="center"
+					android:maxLines="1"
+					android:padding="@dimen/feature_section_padding"
+					android:text="@string/template_default_name"
+					android:textAllCaps="true"
+					android:textAppearance="?android:attr/textAppearanceLarge" />
 
 				<androidx.appcompat.widget.AppCompatTextView
 					style="@style/Widget.ListTitle"
@@ -652,141 +623,128 @@
 
 				</LinearLayout>
 
-			</LinearLayout>
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/listTitleGraphData"
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/activity_horizontal_margin"
+					android:text="Graph Data" />
 
+				<com.jjoe64.graphview.GraphView
+					android:id="@+id/graph"
+					android:layout_width="match_parent"
+					android:layout_height="160dp" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/listTitleInputData"
+					style="@style/Widget.ListTitle"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_above="@id/linearLayoutInputData"
+					android:layout_marginTop="@dimen/activity_horizontal_margin"
+					android:text="User Input" />
+
+				<LinearLayout
+					android:id="@+id/linearLayoutInputData"
+					android:layout_width="match_parent"
+					android:layout_height="50dp"
+					android:layout_above="@id/linearLayoutButtons"
+					android:orientation="horizontal">
+
+					<EditText
+						android:id="@+id/editText_timeDuration0"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:ems="10"
+						android:inputType="number"
+						android:text="0" />
+
+					<TextView
+						android:id="@+id/textView_timeDuration0"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:text="hrs" />
+
+					<EditText
+						android:id="@+id/editText_timeDuration1"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:ems="10"
+						android:inputType="number"
+						android:text="0" />
+
+					<TextView
+						android:id="@+id/textView_timeDuration1"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:text="mins" />
+
+					<EditText
+						android:id="@+id/editText_timeDuration2"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:ems="10"
+						android:inputType="number"
+						android:text="40" />
+
+					<TextView
+						android:id="@+id/textView_timeDuration2"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:text="secs" />
+				</LinearLayout>
+
+				<LinearLayout
+					android:id="@+id/linearLayoutButtons"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_alignParentBottom="true"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="@dimen/activity_horizontal_margin"
+					android:orientation="horizontal">
+
+					<com.google.android.material.button.MaterialButton
+						android:id="@+id/action_read"
+						style="@style/Widget.MaterialComponents.Button"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:text="@string/template_action_read"
+						app:backgroundTint="@color/nordicLake" />
+
+					<com.google.android.material.button.MaterialButton
+						android:id="@+id/action_connect"
+						style="@style/Widget.Connect"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="6dp"
+						android:layout_marginRight="6dp"
+						android:layout_weight="3"
+						android:onClick="onConnectClicked"
+						android:text="@string/action_connect" />
+
+					<com.google.android.material.button.MaterialButton
+						android:id="@+id/action_write_characteristic_stat"
+						style="@style/Widget.MaterialComponents.Button"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="2"
+						android:text="@string/template_action_write"
+						app:backgroundTint="@color/nordicLake" />
+
+				</LinearLayout>
+
+			</LinearLayout>
 		</ScrollView>
 
+	</androidx.constraintlayout.widget.ConstraintLayout>
 
-		<androidx.appcompat.widget.AppCompatTextView
-			style="@style/Widget.ListTitle"
-			android:id="@+id/listTitleGraphData"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_below="@id/scrollView"
-			android:layout_marginTop="@dimen/activity_horizontal_margin"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin"
-			android:text="Graph Data" />
-
-		<com.jjoe64.graphview.GraphView
-			android:id="@+id/graph"
-			android:layout_width="match_parent"
-			android:layout_height="160dip"
-			android:layout_below="@id/listTitleGraphData"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin" />
-
-		<androidx.appcompat.widget.AppCompatTextView
-			style="@style/Widget.ListTitle"
-			android:id="@+id/listTitleInputData"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_above="@id/linearLayoutInputData"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin"
-			android:text="User Input" />
-
-		<LinearLayout
-			android:id="@+id/linearLayoutInputData"
-			android:layout_width="match_parent"
-			android:layout_height="50dp"
-			android:layout_above="@id/linearLayoutButtons"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin"
-			android:orientation="horizontal">
-
-			<EditText
-				android:id="@+id/editText_timeDuration0"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:ems="10"
-				android:inputType="number"
-				android:text="0" />
-
-			<TextView
-				android:id="@+id/textView_timeDuration0"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:text="hrs" />
-
-			<EditText
-				android:id="@+id/editText_timeDuration1"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:ems="10"
-				android:inputType="number"
-				android:text="0" />
-
-			<TextView
-				android:id="@+id/textView_timeDuration1"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:text="mins" />
-
-			<EditText
-				android:id="@+id/editText_timeDuration2"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:ems="10"
-				android:inputType="number"
-				android:text="40" />
-
-			<TextView
-				android:id="@+id/textView_timeDuration2"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="1"
-				android:text="secs" />
-		</LinearLayout>
-
-		<LinearLayout
-			android:id="@+id/linearLayoutButtons"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true"
-			android:layout_centerHorizontal="true"
-			android:layout_marginLeft="@dimen/feature_horizontal_margin"
-			android:layout_marginRight="@dimen/feature_horizontal_margin"
-			android:layout_marginBottom="@dimen/activity_vertical_margin_bottom_narrow"
-			android:orientation="horizontal">
-
-			<com.google.android.material.button.MaterialButton
-				android:id="@+id/action_read"
-				style="@style/Widget.MaterialComponents.Button"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="2"
-				android:text="@string/template_action_read"
-				app:backgroundTint="@color/nordicLake" />
-
-			<com.google.android.material.button.MaterialButton
-				android:id="@+id/action_connect"
-				style="@style/Widget.Connect"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="6dp"
-				android:layout_marginRight="6dp"
-				android:layout_weight="3"
-				android:onClick="onConnectClicked"
-				android:text="@string/action_connect" />
-
-			<com.google.android.material.button.MaterialButton
-				android:id="@+id/action_write_characteristic_stat"
-				style="@style/Widget.MaterialComponents.Button"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:layout_weight="2"
-				android:text="@string/template_action_write"
-				app:backgroundTint="@color/nordicLake" />
-
-		</LinearLayout>
-
-
-	</no.nordicsemi.android.nrftoolbox.widget.ForegroundRelativeLayout>
 </LinearLayout>
 
